Fix window off-screen behavior

--- a/index.css
+++ b/index.css
@@ -49,11 +49,6 @@ strong {
     margin: 0;
 }
 
-#todo-items {
-    height: 200px;
-    overflow: scroll;
-}
-
 #bg-select {
     background-color: rgba(255, 255, 255, .15);
     border-color: rgba(255, 255, 255, .57);
@@ -61,4 +56,13 @@ strong {
     border-width: 1px;
     position: absolute;
     z-index: -1;
+}
+
+#todo-items {
+    height: 200px;
+    overflow: scroll;
+}
+
+#about-bio {
+    width: 400px;
 }
